seaqt/QtWidgets/gen_qgroupbox.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QGroupBox QGroupBox;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionGroupBox QStyleOptionGroupBox;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QGroupBox* QGroupBox_new(QWidget* parent);
QGroupBox* QGroupBox_new2();
QGroupBox* QGroupBox_new3(struct miqt_string title);
QGroupBox* QGroupBox_new4(struct miqt_string title, QWidget* parent);
QMetaObject* QGroupBox_metaObject(const QGroupBox* self);
void* QGroupBox_metacast(QGroupBox* self, const char* param1);
struct miqt_string QGroupBox_tr(const char* s);
struct miqt_string QGroupBox_title(const QGroupBox* self);
void QGroupBox_setTitle(QGroupBox* self, struct miqt_string title);
int QGroupBox_alignment(const QGroupBox* self);
void QGroupBox_setAlignment(QGroupBox* self, int alignment);
QSize* QGroupBox_minimumSizeHint(const QGroupBox* self);
bool QGroupBox_isFlat(const QGroupBox* self);
void QGroupBox_setFlat(QGroupBox* self, bool flat);
bool QGroupBox_isCheckable(const QGroupBox* self);
void QGroupBox_setCheckable(QGroupBox* self, bool checkable);
bool QGroupBox_isChecked(const QGroupBox* self);
void QGroupBox_setChecked(QGroupBox* self, bool checked);
void QGroupBox_clicked(QGroupBox* self);
void QGroupBox_connect_clicked(QGroupBox* self, intptr_t slot);
void QGroupBox_toggled(QGroupBox* self, bool param1);
void QGroupBox_connect_toggled(QGroupBox* self, intptr_t slot);
struct miqt_string QGroupBox_tr2(const char* s, const char* c);
struct miqt_string QGroupBox_tr3(const char* s, const char* c, int n);
void QGroupBox_clicked1(QGroupBox* self, bool checked);
void QGroupBox_connect_clicked1(QGroupBox* self, intptr_t slot);
bool QGroupBox_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QGroupBox_virtualbase_minimumSizeHint(const void* self);
bool QGroupBox_override_virtual_event(void* self, intptr_t slot);
bool QGroupBox_virtualbase_event(void* self, QEvent* event);
bool QGroupBox_override_virtual_childEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGroupBox_override_virtual_resizeEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QGroupBox_override_virtual_paintEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QGroupBox_override_virtual_focusInEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QGroupBox_override_virtual_changeEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_changeEvent(void* self, QEvent* event);
bool QGroupBox_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QGroupBox_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QGroupBox_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QGroupBox_override_virtual_initStyleOption(void* self, intptr_t slot);
void QGroupBox_virtualbase_initStyleOption(const void* self, QStyleOptionGroupBox* option);
bool QGroupBox_override_virtual_devType(void* self, intptr_t slot);
int QGroupBox_virtualbase_devType(const void* self);
bool QGroupBox_override_virtual_setVisible(void* self, intptr_t slot);
void QGroupBox_virtualbase_setVisible(void* self, bool visible);
bool QGroupBox_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QGroupBox_virtualbase_sizeHint(const void* self);
bool QGroupBox_override_virtual_heightForWidth(void* self, intptr_t slot);
int QGroupBox_virtualbase_heightForWidth(const void* self, int param1);
bool QGroupBox_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QGroupBox_virtualbase_hasHeightForWidth(const void* self);
bool QGroupBox_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QGroupBox_virtualbase_paintEngine(const void* self);
bool QGroupBox_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QGroupBox_override_virtual_wheelEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QGroupBox_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QGroupBox_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QGroupBox_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QGroupBox_override_virtual_enterEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QGroupBox_override_virtual_leaveEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_leaveEvent(void* self, QEvent* event);
bool QGroupBox_override_virtual_moveEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QGroupBox_override_virtual_closeEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QGroupBox_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QGroupBox_override_virtual_tabletEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QGroupBox_override_virtual_actionEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QGroupBox_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QGroupBox_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QGroupBox_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QGroupBox_override_virtual_dropEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QGroupBox_override_virtual_showEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_showEvent(void* self, QShowEvent* event);
bool QGroupBox_override_virtual_hideEvent(void* self, intptr_t slot);
void QGroupBox_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QGroupBox_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QGroupBox_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QGroupBox_override_virtual_metric(void* self, intptr_t slot);
int QGroupBox_virtualbase_metric(const void* self, int param1);
void QGroupBox_virtualbase_initPainter(const void* self, QPainter* painter);