seaqt/QtWidgets/gen_qgroupbox.nim


proc fcQGroupBox_new(parent: pointer): ptr cQGroupBox {.importc: "QGroupBox_new".}
proc fcQGroupBox_new2(): ptr cQGroupBox {.importc: "QGroupBox_new2".}
proc fcQGroupBox_new3(title: struct_miqt_string): ptr cQGroupBox {.importc: "QGroupBox_new3".}
proc fcQGroupBox_new4(title: struct_miqt_string, parent: pointer): ptr cQGroupBox {.importc: "QGroupBox_new4".}
proc fcQGroupBox_metaObject(self: pointer, ): pointer {.importc: "QGroupBox_metaObject".}
proc fcQGroupBox_metacast(self: pointer, param1: cstring): pointer {.importc: "QGroupBox_metacast".}
proc fcQGroupBox_tr(s: cstring): struct_miqt_string {.importc: "QGroupBox_tr".}
proc fcQGroupBox_title(self: pointer, ): struct_miqt_string {.importc: "QGroupBox_title".}
proc fcQGroupBox_setTitle(self: pointer, title: struct_miqt_string): void {.importc: "QGroupBox_setTitle".}
proc fcQGroupBox_alignment(self: pointer, ): cint {.importc: "QGroupBox_alignment".}
proc fcQGroupBox_setAlignment(self: pointer, alignment: cint): void {.importc: "QGroupBox_setAlignment".}
proc fcQGroupBox_minimumSizeHint(self: pointer, ): pointer {.importc: "QGroupBox_minimumSizeHint".}
proc fcQGroupBox_isFlat(self: pointer, ): bool {.importc: "QGroupBox_isFlat".}
proc fcQGroupBox_setFlat(self: pointer, flat: bool): void {.importc: "QGroupBox_setFlat".}
proc fcQGroupBox_isCheckable(self: pointer, ): bool {.importc: "QGroupBox_isCheckable".}
proc fcQGroupBox_setCheckable(self: pointer, checkable: bool): void {.importc: "QGroupBox_setCheckable".}
proc fcQGroupBox_isChecked(self: pointer, ): bool {.importc: "QGroupBox_isChecked".}
proc fcQGroupBox_setChecked(self: pointer, checked: bool): void {.importc: "QGroupBox_setChecked".}
proc fcQGroupBox_clicked(self: pointer, ): void {.importc: "QGroupBox_clicked".}
proc fcQGroupBox_connect_clicked(self: pointer, slot: int) {.importc: "QGroupBox_connect_clicked".}
proc fcQGroupBox_toggled(self: pointer, param1: bool): void {.importc: "QGroupBox_toggled".}
proc fcQGroupBox_connect_toggled(self: pointer, slot: int) {.importc: "QGroupBox_connect_toggled".}
proc fcQGroupBox_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGroupBox_tr2".}
proc fcQGroupBox_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGroupBox_tr3".}
proc fcQGroupBox_clicked1(self: pointer, checked: bool): void {.importc: "QGroupBox_clicked1".}
proc fcQGroupBox_connect_clicked1(self: pointer, slot: int) {.importc: "QGroupBox_connect_clicked1".}
proc fQGroupBox_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QGroupBox_virtualbase_minimumSizeHint".}
proc fcQGroupBox_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_minimumSizeHint".}
proc fQGroupBox_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGroupBox_virtualbase_event".}
proc fcQGroupBox_override_virtual_event(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_event".}
proc fQGroupBox_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_childEvent".}
proc fcQGroupBox_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_childEvent".}
proc fQGroupBox_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_resizeEvent".}
proc fcQGroupBox_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_resizeEvent".}
proc fQGroupBox_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_paintEvent".}
proc fcQGroupBox_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_paintEvent".}
proc fQGroupBox_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_focusInEvent".}
proc fcQGroupBox_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_focusInEvent".}
proc fQGroupBox_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_changeEvent".}
proc fcQGroupBox_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_changeEvent".}
proc fQGroupBox_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_mousePressEvent".}
proc fcQGroupBox_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_mousePressEvent".}
proc fQGroupBox_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_mouseMoveEvent".}
proc fcQGroupBox_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_mouseMoveEvent".}
proc fQGroupBox_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_mouseReleaseEvent".}
proc fcQGroupBox_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_mouseReleaseEvent".}
proc fQGroupBox_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QGroupBox_virtualbase_initStyleOption".}
proc fcQGroupBox_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_initStyleOption".}
proc fQGroupBox_virtualbase_devType(self: pointer, ): cint{.importc: "QGroupBox_virtualbase_devType".}
proc fcQGroupBox_override_virtual_devType(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_devType".}
proc fQGroupBox_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QGroupBox_virtualbase_setVisible".}
proc fcQGroupBox_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_setVisible".}
proc fQGroupBox_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QGroupBox_virtualbase_sizeHint".}
proc fcQGroupBox_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_sizeHint".}
proc fQGroupBox_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QGroupBox_virtualbase_heightForWidth".}
proc fcQGroupBox_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_heightForWidth".}
proc fQGroupBox_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QGroupBox_virtualbase_hasHeightForWidth".}
proc fcQGroupBox_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_hasHeightForWidth".}
proc fQGroupBox_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QGroupBox_virtualbase_paintEngine".}
proc fcQGroupBox_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_paintEngine".}
proc fQGroupBox_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_mouseDoubleClickEvent".}
proc fcQGroupBox_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_mouseDoubleClickEvent".}
proc fQGroupBox_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_wheelEvent".}
proc fcQGroupBox_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_wheelEvent".}
proc fQGroupBox_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_keyPressEvent".}
proc fcQGroupBox_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_keyPressEvent".}
proc fQGroupBox_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_keyReleaseEvent".}
proc fcQGroupBox_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_keyReleaseEvent".}
proc fQGroupBox_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_focusOutEvent".}
proc fcQGroupBox_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_focusOutEvent".}
proc fQGroupBox_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_enterEvent".}
proc fcQGroupBox_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_enterEvent".}
proc fQGroupBox_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_leaveEvent".}
proc fcQGroupBox_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_leaveEvent".}
proc fQGroupBox_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_moveEvent".}
proc fcQGroupBox_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_moveEvent".}
proc fQGroupBox_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_closeEvent".}
proc fcQGroupBox_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_closeEvent".}
proc fQGroupBox_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_contextMenuEvent".}
proc fcQGroupBox_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_contextMenuEvent".}
proc fQGroupBox_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_tabletEvent".}
proc fcQGroupBox_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_tabletEvent".}
proc fQGroupBox_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_actionEvent".}
proc fcQGroupBox_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_actionEvent".}
proc fQGroupBox_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_dragEnterEvent".}
proc fcQGroupBox_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_dragEnterEvent".}
proc fQGroupBox_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_dragMoveEvent".}
proc fcQGroupBox_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_dragMoveEvent".}
proc fQGroupBox_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_dragLeaveEvent".}
proc fcQGroupBox_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_dragLeaveEvent".}
proc fQGroupBox_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_dropEvent".}
proc fcQGroupBox_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_dropEvent".}
proc fQGroupBox_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_showEvent".}
proc fcQGroupBox_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_showEvent".}
proc fQGroupBox_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QGroupBox_virtualbase_hideEvent".}
proc fcQGroupBox_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_hideEvent".}
proc fQGroupBox_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QGroupBox_virtualbase_nativeEvent".}
proc fcQGroupBox_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_nativeEvent".}
proc fQGroupBox_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QGroupBox_virtualbase_metric".}
proc fcQGroupBox_override_virtual_metric(self: pointer, slot: int) {.importc: "QGroupBox_override_virtual_metric".}
proc fQGroupBox_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QGroupBox_virtualbase_initPainter".}
